--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/case_m4_c0223?allowPublicKeyRetrieval=true&characterEncoding=UTF-8&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/case_m4_c0223_cafe?allowPublicKeyRetrieval=true&characterEncoding=UTF-8&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=long250499
