--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,3 +1,8 @@
+spring.thymeleaf.cache = false
+spring.thymeleaf.prefix = file:src/main/resources/templates/
+spring.web.resources.static-locations=[classpath:META-INF/resources/, file:src/main/resources/, file:src/main/resources/static/, file:src/main/resources/static/assets/, classpath:/public/]
+spring.web.resources.cache.period=0
+
 spring.datasource.url=jdbc:mysql://localhost:3306/case_m4_c0223_cafe?allowPublicKeyRetrieval=true&characterEncoding=UTF-8&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=long250499
